// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Expander__HeaderWrapper-sc-147204-0 insQpf"
    id={null}
    onClick={[Function]}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Accordion Title
        </h6>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="angle-up"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
    open={false}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      hi
    </p>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Expander__HeaderWrapper-sc-147204-0 insQpf"
    id={null}
    onClick={[Function]}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
            id="checkbox-id"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor="checkbox-id"
            letterSpacing=".5px"
          >
            Label 1
          </label>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="angle-up"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
    open={false}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      hi
    </p>
  </div>
</div>
`;

exports[` 3`] = `
Array [
  <div
    className="Expander__HeaderWrapper-sc-147204-0 insQpf"
    id={null}
    onClick={[Function]}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Accordion Title
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dBAreK"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          This is a description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="angle-up"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>,
  <div
    className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
    open={false}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      This is the body of the accordion. Put whatever you want in here
    </p>
  </div>,
]
`;

exports[` 4`] = `
Array [
  <div
    className="Expander__HeaderWrapper-sc-147204-0 insQpf"
    id={null}
    onClick={[Function]}
  >
    <div
      className="Bar__BarLayout-icfo76-2 izXrkl"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Accordion Title
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dBAreK"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          This is a description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-up fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="angle-up"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>,
  <div
    className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
    open={false}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      This is the body of the accordion. Put whatever you want in here
    </p>
  </div>,
]
`;
